--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -19,7 +19,7 @@
   position: absolute;
   width: 50px;
   height: 50px;
-  background-color: rgba(255, 255, 255, 0.5); /* Adjust the color and opacity as needed */
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .home-container::before {
@@ -76,6 +76,10 @@ p.name {
   font-size: 20px;
   line-break: auto;
   justify-content: left;
+}
+
+.about-wrapper{
+  margin-bottom: 80px;
 }
 
 @keyframes fadeInUp {
